updated registry fx, phase one export refactor
